# rust-lambda

./: Cargo.toml  Setup.ps1
.github/workflows/: deploy.yml  rust.yml
.run/: Build.run.xml  Check.run.xml  Check_wasm32.run.xml  Clean.run.xml  Clippy.run.xml  Deploy.run.xml  Fmt.run.xml  Test_Suite.run.xml
src/: main.rs
