[package]
name = "rust-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8.0"
serde = "1.0.160"
tokio = {version = "1.27.0", features = ["full"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt"] }
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"

[package.metadata.lambda.env]
RUST_LOG = "debug"
